static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lobster&family=Roboto&family=Roboto+Mono&display=swap');

/*
font-family: 'Anton', sans-serif;
font-family: 'Lobster', cursive;
font-family: 'Roboto', sans-serif;
font-family: 'Roboto Mono', monospace;
*/


/*    --------    Base    --------    */

body {
    background-color: #F7F3E0;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

header {
    height: 64px;
}

.page-head {
    font-family: 'Anton', sans-serif;
    color: #424242;
    margin: 0;
}

p {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    color: #424242;
}

/*    --------    Nav    --------    */

nav {
    background: #F67E69;
    height: 64px !important;
    line-height: 56px !important;
}

nav .brand-logo {
    font-family: 'Lobster', cursive;
    color: #F7F3E0;
    text-shadow: 0px 1px #424242;
    margin-top: 4px;
}

.dropdown-content li {
    text-align: center !important;
}

.dropdown-content li>a {
    font-family: 'Anton', sans-serif !important;
    color: #F7F3E0 !important;
    font-size: 20px !important;
}

.navdrop {
    background-color: #F67E69 !important;
    width: 100vw !important;
    top: 64px !important;
    left: 0 !important;
    margin: 0px !important;
}
nav ul {
    margin: 4px !important;
}

ul li .left:hover {
    background-color: transparent !important;
}

@media only screen and (min-width: 601px) {
    nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
        line-height: 56px !important;
    }
}
nav ul a:hover {
    background-color: transparent !important;
}

.dropdown-content li:hover {
    background-color: #F67E69 !important;
}

.dropdown-content li>a:hover {
    font-family: 'Anton', sans-serif !important;
    color: #ECE1C5 !important;
    text-shadow: 0px 3px rgba(0,0,0,0.25) !important;
    background-color: #F67E69 !important;
}

/*    --------   Main   --------    */

main {
    flex: 1 0 auto;
}

.head-row {
    margin-top: 9px !important;
    margin-bottom: 6px !important;
}

.block-head {
    font-family: 'Anton', sans-serif;
    text-align: center;
    color: #8DAAA6;
    margin-top: 0;
    margin-bottom: 8px;
    width: 100%;
    font-size: 1.7em;
}

.block-headban {
    background-color: #8DAAA6;
    width: 100%;
}

.headban-head {
    font-family: 'Anton', sans-serif;
    text-align: center;
    color: #F7F3E0;
    font-size: 1.3em;
    letter-spacing: 1px;
    padding: 4px;
    margin: 0;
}

.content {
    margin: 9px;
    background-color: #F7F3E0;
    border: 2px solid #8DAAA6;
    box-sizing: border-box;
    align-self: center;
    padding: 10px !important;
    overflow-y: auto;
}

@media (max-width: 600px) {
    .content {
        width: -moz-available !important;
        width: -webkit-fill-available !important;
        width: fill-available !important;
        margin: 0px 9px !important;
        height: 65vh;
    }
}

@media (min-width: 601px) {
    .content {
        height: 75vh;
    }
}

@media (min-width: 993px) {
    .content {
        height: 65vh;
    }
}

/*    --------   Footer   --------    */

.page-footer {
    padding-top: 0px;
    background-color: #8DAAA6;
}

.footer {
    margin-bottom: 12px;
    margin-top: 12px;
}

.footer-text {
    color: #F7F3E0;
    margin: auto;
}

/*    --------    Index    --------    */

.index-row {
    margin-bottom: 27px !important;
    margin-top: 27px;
}

@media (min-width: 601px) {
    .index-row {
        margin-bottom: 18px !important;
        margin-top: 27px;
    }
}

.index-head {
    text-align: center;
    width: 100vw;
    padding: 24px;
}

.headban-index {
    margin-top: 4px;
    margin-bottom: 4px;
}

.index-p {
    margin: 0px;
    text-align: justify;
}

#index-bread-img {
    padding: 0px;
}

/*    --------    Recipe Database    --------    */

.bread-head {
    margin: 0px;
    padding: 0px !important;
}

.db-row {
    margin: 27px 9px 9px !important;
}

.head-col {
    padding: 0 !important;
    width: fill-available !important;
}

@media (min-width: 601px) {
    .bread-head {
        padding: 0 !important;
    }
    .db-row {
        margin: 36px 0px 0px 0px !important;
    }
}

.button-container {
    width: auto !important;
    margin: 0 !important;
}

.td-btn {
    background-color: #8DAAA6;
    color: #F7F3E0;
    font-family: 'Anton', sans-serif;
    font-size: 20px;
    text-transform: none;
    letter-spacing: 1px;
    border-radius: 0px;
    box-shadow: 0px 0px 0px;
    float: right !important;
}

@media only screen and (min-width: 993px) {
    .td-btn {
        margin-left: 9px !important;
    }
}

.td-btn:hover,
.td-btn:active,
.td-btn:focus {
    background-color: #8DAAA6;
    color: #F7F3E0;
    font-family: 'Anton', sans-serif;
    font-size: 20px;
    text-transform: none;
    letter-spacing: 1px;
    border-radius: 0px;
    box-shadow: 0px 0px 0px;
}

.td-drop {
    background-color: #8DAAA6;
}

.headban-db {
    margin: 0px;
}

.s12 .db-list-item {
    padding-left: 0px !important;
    padding-right: 0px !important;
    padding-bottom: 4px;
    border-bottom: solid 2px #8DAAA6;
}

.db-recipe-name {
    font-family: 'Anton', sans-serif;
    color: #8DAAA6;
    margin-top: 7px;
    margin-bottom: 0px;
}

.db-recipe-spec {
    padding: 0 !important;
    font-size: 16px;
    color: #424242;
}

.db-recipe-item {
    transform: translateY(6px);
}

.right.db-recipe-spec {
    text-align: right;
}

a:active, a:hover>div>h5 {
    color: #424242;
}

/*    --------    Recipe View    --------    */

.rec-item {
    padding: 0 !important;
    margin-bottom: 0px;
}

.rec-view-info {
    padding: 0px 0px !important;
    font-size: 16px;
}

.rv-info-col {
    text-align: right;
}

.rvi-serve {
    transform: translateY(-10px);
}

.type-icon {
    font-size: xx-large;
    transform: translateY(15%);
    color: rgba(0,0,0,0.2);
}

.collapse-view {
    margin: 0px !important;
    border: 0 !important;
    -webkit-box-shadow: 0 0px 0px 0px rgba(0,0,0,0.0) !important;
    box-shadow: 0 0px 0px 0px rgba(0,0,0,0.0) !important; 
}

.collapse-view>li {
    margin-bottom: 9px;
}

.collaps-head-view {
    background-color: #8DAAA6;
    color: #F7F3E0;
    font-family: 'Anton', sans-serif;
    font-size: 20px;
    text-transform: none;
    letter-spacing: 1px;
    padding: 4px;
    margin-top: 0px;
    border: 0px;
}

.collaps-head-view>i {
    transform: translateY(4px);
}

@media (min-width: 601px) {
    .collaps-head-view>i {
        margin-right: -7px;
    }
}

.active>i {
    transform: rotateX(180deg) translateY(4px);
}

.collaps-body-view {
    border: solid 2px #8DAAA6;
    transform: translateY(-1px);
    padding: 4px 1px 4px 1px;
}

.td-ing {
    padding: 0px 4px !important;
}

.td-amount {
    padding: 0px 2px 0px 0px !important;
    text-align: right;
}

td {
    font-size: 16px;
    color: #424242;
}

.step-num {
    border-bottom: solid 2px #8DAAA6;
    margin-bottom: 4px;
    padding-top: 2px;
    padding-left: 0px !important;
    font-weight: bold;
}

.step-ins {
    padding-left: 0px !important;
    padding-right: 0px !important;
    text-align: justify;
}

.view-img-td {
    padding: 8px 9px 0px 9px !important;
}

.view-img {
    padding: 0px;
    width: inherit;
}

.ed-btn {
    background-color: #F7F3E0;
    color: #8DAAA6;
    font-family: 'Anton', sans-serif;
    font-size: 20px;
    text-transform: none;
    letter-spacing: 1px;
    border: solid 2px #8DAAA6;
    border-radius: 0px;
    box-shadow: 0px 0px 0px;
    width: 48%;
}

.e-btn {
    margin-right: 4px;
}

@media {
    .e-btn {
        margin-right: 9px;
    }
}

.d-btn {
    margin-left: 4px;
}

.ed-icon {
    margin-left: 5px;
    transform: translateY(-2px)
}

/*    --------    Recipe New    --------    */

.new-form {
    padding: 0px !important;
}

#new-init-info {
    margin-bottom: 0px !important;
}

.new-f-field {
    margin: 0px;
}

input {
    margin-bottom: 0px !important;
}

.input-field {
    padding: 5px 0px !important;
    margin-top: 0;
}

.input-field>input {
    margin-bottom: 10px !important;
}

.input-field>.select-wrapper {
    margin-right: 4px !important;
    margin-left: 4px !important;
}

.time-serve,
td.input-field {
    border: solid 4px #F7F3E0;
}

.new-ing-am {
    left: 0 !important;
}

.collaps-instruction-view {
    border: solid 2px #8DAAA6;
    transform: translateY(-1px);
    padding: 4px 1px 4px 1px;
}

td.input-field.step-ins {
    border: 0;
}

